<?xml version="1.0"?>
<package format="3">
  <name>detect_openvn</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wildanrisqi04@gmail.com">ichbinwil</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>detect_messages</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>detect_messages</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
